fix(ci): test failing e2e

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           node-version: 20
           cache: 'npm'
       - run: npm ci
+      - run: npx playwright install --with-deps
       - uses: nrwl/nx-set-shas@v4
 
       - run: git branch --track main origin/main
