--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "18.0.1",
     "@angular/language-service": "18.0.1",
+    "@eslint/eslintrc": "^2.1.1",
+    "@eslint/js": "~8.57.0",
     "@nx/devkit": "19.1.1",
     "@nx/eslint": "19.1.1",
     "@nx/eslint-plugin": "19.1.1",
